--- a/style.css
+++ b/style.css
@@ -17,3 +17,13 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
     list-style: none;
   }
   
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  a {
+      text-decoration: none;
+      color: black;
+      font-weight: bold;
+  }
