--- a/style.css
+++ b/style.css
@@ -27,3 +27,14 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
       color: black;
       font-weight: bold;
   }
+
+  .button {
+      display: inline-block;
+      padding: 0.25em 0.5em;
+  }
+
+  .container {
+      max-width: 1100px;
+      width: 100%;
+      margin: 0 auto;
+  }
