--- a/frontend/assets/css/reset.css
+++ b/frontend/assets/css/reset.css
@@ -20,16 +20,12 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul, a {
     cursor: default;
 }
 
-ol, ul {
-    list-style: none;
-}
-
 img {
     max-width: 100%;
     height: auto;
 }
 
-button {
+.appBar button {
     border: none;
     margin: 0;
     padding: 0;
