fix: cor do footer

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -39,7 +39,7 @@ a {
 }
 
 .appFooter {
-    background-color:lightgoldenrodyellow;
+    background-color: #a7f3d0;
     color: black;
     height: 2rem;
     display: flex;
