--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -19,14 +19,18 @@ a {
 .appBar {
     background-color:lightpink;
     color: #1B1B1B;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 3fr 1fr 3fr;
 
 }
 
-.app a, .app .btn {
+.appBar .actions {
+    text-align: right;
+}
+
+.app a,
+.app .btn {
+    display: inline-block;
     text-decoration: none;
     font-weight: bold;
     padding: 0.25rem 0.25rem;
@@ -42,20 +46,24 @@ a {
 }
 
 .app img {
+    display: inline-block;
     width: auto;
-    height: 1.5rem;
+    height: 1.7rem;
+    justify-self: center;
 }
 
 .appFooter {
     background-color: #a7f3d0;
     color: #1B1B1B;
     height: 2rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 7fr 1fr 7fr;
+}
+
+.appFooter .esquerda {
+    text-align: right;
 }
 
 .appFooter span {
-    margin: 0 1rem;
+    text-align: center;
 }
