--- a/app/assets/styles/app.css
+++ b/app/assets/styles/app.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Convergence&display=swap');
+
 html {
     color: #1B1B1B;
+    font-family: 'Convergence', sans-serif;
 }
 
 h1              { font-size: 2.3em;   margin: .28em 0 }
@@ -16,40 +19,10 @@ a {
     cursor: pointer;
 }
 
-.nav {
-    background-color:lightpink;
-    color: #1B1B1B;
-    display: grid;
-    grid-template-columns: 3fr 1fr 3fr;
-
-}
-
-.nav .actions {
-    text-align: right;
-}
-
-.bar a,
-.bar .action {
-    display: inline-block;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 0.25rem 0.25rem;
-    cursor: pointer;
-}
-
-.bar .action.disabled {
-    color: #808080;
-}
-
-.bar .action.disabled:hover {
-    cursor:default;
-}
-
-.bar img {
-    display: inline-block;
-    width: auto;
-    height: 1.7rem;
-    justify-self: center;
+#viewer {
+    width: 100%;
+    min-height: 58em;
+    padding: 1em;
 }
 
 footer {
