--- a/app/assets/views/html/inicio.html
+++ b/app/assets/views/html/inicio.html
@@ -1,5 +1,7 @@
 <h1>Maloca</h1>
 <div>imagem</div>
 <p>avisos: asdf asdf asdf</p>
-
+<a href="https://flamita.club">flamita club</a>
+<span>visite o blog <a href="https://flamita.club">flamita club</a>
+ para mais aventuras</span>
 <p>página inicial para pessoa logada</p>
