--- a/app/assets/styles/app.css
+++ b/app/assets/styles/app.css
@@ -15,32 +15,16 @@ h1, h2, h3, h4,
 h5, h6          { font-weight: bolder }
 
 a {
-    text-decoration: underline;
+    text-decoration:underline;
     cursor: pointer;
+}
+
+a:hover {
+    text-decoration:overline;
 }
 
 #viewer {
     width: 100%;
     min-height: 58em;
     padding: 1em;
-}
-
-footer {
-    background-color: #a7f3d0;
-    color: #1B1B1B;
-    height: 2rem;
-    display: grid;
-    grid-template-columns: 7fr 1fr 7fr;
-}
-
-footer .esquerda {
-    text-align: right;
-}
-
-footer .direita {
-    text-align: left;
-}
-
-footer span {
-    text-align: center;
 }
