move links para view inicial

--- a/app/assets/views/html/inicio.html
+++ b/app/assets/views/html/inicio.html
@@ -5,3 +5,11 @@
 <span>visite o blog <a href="https://flamita.club">flamita club</a>
  para mais aventuras</span>
 <p>página inicial para pessoa logada</p>
+<br>
+<a href="/" data-link>Início</a>
+<a href="/boasvindas" data-link>Boas-vindas</a>
+<a href="/registro" data-link>Registro</a>
+<a href="/entrar" data-link>Entrar</a>
+<a href="/colecao" data-link>Coleção</a>
+<a href="/configuracao" data-link>Configuração</a>
+<a href="/pessoa/eu" data-link>Meu perfil</a>
