--- a/app/assets/styles/app.css
+++ b/app/assets/styles/app.css
@@ -54,10 +54,9 @@ main {
     padding: 1em;
 }
 
-footer {
+#footer {
     height: 2em;
 	width: 100%;
-    padding: 0.2em 0.4em;
     background-color: #a7f3d0;
     color: #1B1B1B;
     display: flex;
@@ -67,8 +66,9 @@ footer {
     gap: 2em;
 }
 
-.footer-group {
+#footer .footer-group {
     display: inline-block;
     height: 100%;
     width: auto;
+    padding: 0.2em 0.4em;
 }
