--- a/app/assets/views/html/inicio.html
+++ b/app/assets/views/html/inicio.html
@@ -10,4 +10,4 @@
 <a href="/boasvindas" data-link>Boas-vindas</a>
 <a href="/colecao" data-link>Coleção</a>
 <a href="/configuracao" data-link>Configuração</a>
-<a href="/pessoa/eu" data-link>Meu perfil</a>
+<a href="/pessoa/dani" data-link>Meu perfil (dani)</a>
