refatora lógicas de estado e de renderização

--- a/app/assets/views/inicio.html
+++ b/app/assets/views/inicio.html
@@ -7,7 +7,7 @@
 <p>página inicial para pessoa logada</p>
 <br>
 <a href="/" data-link>Início</a>
-<a href="/boasvindas" data-link>Boas-vindas</a>
+<a href="/boas-vindas" data-link>Boas-vindas</a>
 <a href="/colecao" data-link>Coleção</a>
 <a href="/configuracao" data-link>Configuração</a>
 <a href="/pessoa/dani" data-link>Meu perfil (dani)</a>
