--- a/app/assets/styles/app.css
+++ b/app/assets/styles/app.css
@@ -68,13 +68,14 @@ img-button {
     overflow-y: hidden;
 }
 
-main {
+maloca-viewer {
+    display: inline-block;
     width: 100%;
     min-height: 57em;
     padding: 1em;
 }
 
-main button {
+maloca-viewer button {
     border-top: 0.12rem solid #a3a3a3;
     border-left: 0.12rem solid #a3a3a3;
     border-bottom: 0.12rem solid #1B1B1B;
@@ -85,7 +86,7 @@ main button {
     transition: 0.05s;
 }
 
-main button:active {
+maloca-viewer button:active {
     border-top: 0.12rem solid #1B1B1B;
     border-left: 0.12rem solid #1B1B1B;
     border-bottom: 0.12rem solid #a3a3a3;
