ajusta página de boas-vindas

--- a/app/assets/views/boasVindas.html
+++ b/app/assets/views/boasVindas.html
@@ -4,7 +4,7 @@
 
 <div id="bv-forms">
 	<form id="form-cadastro">
-		<h3>Crie uma conta</h3>
+		<h3>Crie um perfil</h3>
 		<br>
 		<label for="nome" hidden>nome</label>
 		<input type="text" id="nome-cadastro" placeholder="nome" name="nome" required>
@@ -27,7 +27,7 @@
 	</form>
 
 	<form id="form-login">
-		<h3>Já tem uma conta? É só entrar</h3>
+		<h3>Já tem um perfil?</h3>
 		<br>
 		<label for="nome" hidden>nome</label>
 		<input type="text" id="nome-login" placeholder="nome" name="nome" required>
@@ -41,3 +41,16 @@
 		<button type="submit">entrar</button>
 	</form>
 </div>
+
+<style>
+	#bv-hero {
+		text-align: center;
+	}
+
+	#bv-forms {
+		margin-top: 2rem;
+		display: flex;
+		flex-direction: row;
+		justify-content: space-around;
+	}
+</style>
