--- a/app/assets/styles/estilo-1-ema.css
+++ b/app/assets/styles/estilo-1-ema.css
@@ -1,14 +1,3 @@
-/* ---
-
-Estilo 2 - ema
-
-dark taupe      =   #8B7052
-dark grey       =   #3A3A3C
-taupe           =   #C5AE8C
-charcoal grey   =   #4B4A45
-
-*/
-
 @import url('https://fonts.googleapis.com/css2?family=Convergence&display=swap');
 
 :root {
@@ -17,15 +6,15 @@ charcoal grey   =   #4B4A45
     --cor-gris:         #4b4a45;
     --cor-gris-2:       #3A3A3C;
     --cor-fundo:        #282722;
+    --cor-fundo-2:      var(--cor-gris-2);
     --cor-fonte-view:   #F3F0EB;
     --cor-fonte-barra:  #0c0c0c;
-    --cor-fundo-2:      var(--cor-gris-2);
     --familia-fonte:    'Convergence', sans-serif;
     font-family: var(--familia-fonte);
-    --estilo-borda:     dashed;
-    --espessura-borda:  1px;
+    --estilo-borda:     none;
+    --espessura-borda:  0;
     --raio-borda:       0.4rem;
-    --sombreado: 0;
+    --sombreado: 2px 3px 4px rgba(58, 58, 60, 0.2);;
 }
 
 h1              { font-size: 2.3rem;   margin: .28rem 0 }
