--- a/app/assets/styles/estilo-0-padrao.css
+++ b/app/assets/styles/estilo-0-padrao.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Convergence&display=swap');
 
 :root {
-    --cor-principal:    #eeb6be;
-    --cor-destaque:     #886098;
-    --cor-gris:         #baabab;
-    --cor-gris-2:       #756868;
+    --cor-principal:    #f8c8cf;
+    --cor-destaque:     #7f5d8d;
+    --cor-gris:         #c5baba;
+    --cor-gris-2:       #918484;
     --cor-fundo:        #eeeceb;
     --cor-fundo-2:      #FEFEFE;
     --cor-fonte-view:   #1B1B1B;
