ajustes de estilo

--- a/app/assets/styles/estilo-0-padrao.css
+++ b/app/assets/styles/estilo-0-padrao.css
@@ -5,7 +5,7 @@
     --cor-destaque:     #7f5d8d;
     --cor-gris:         #c5baba;
     --cor-gris-2:       #918484;
-    --cor-fundo:        #eeeceb;
+    --cor-fundo:        #efedec;
     --cor-fundo-2:      #FEFEFE;
     --cor-fonte-view:   #1B1B1B;
     --cor-fonte-barra:  #1B1B1B;
