--- a/app/assets/styles/estilo-1-ema.css
+++ b/app/assets/styles/estilo-1-ema.css
@@ -6,9 +6,9 @@
     --cor-gris:         #363636;
     --cor-gris-2:       #202020;
     --cor-fundo:        #222121;
-    --cor-fundo-2:      #2b2b2b;
-    --cor-fonte-view:   #c7c5c2;
-    --cor-fonte-barra:  #cac6c1;
+    --cor-fundo-2:      #2c2c2c;
+    --cor-fonte-view:   #c9c6c4;
+    --cor-fonte-barra:  #cbc7c3;
     --familia-fonte:    'Convergence', sans-serif;
     font-family: var(--familia-fonte);
     --estilo-borda:     none;
